about us and index

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <meta property="og:type" content="website" /> 
 <meta property="og:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="og:title" content="Чаща. Медиа о природных знаках " /> 
-<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
 
  
@@ -20,30 +20,19 @@
 <meta property="twitter:card" content="summary_large_image" /> 
 <meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="twitter:title" content="Чаща. Медиа о природных знаках " /> 
-<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа чаща собирает и интерпретирует эти природные сигналы." /> 
+<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
 
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
   </head>
+ 
 
+<body class="main">
   <header>
     <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
-  </header>
-
-  <p class="chascha">чаща</p>
-  <body class="main">
-  <!-- <p><a href="index.html">Главная</a></p> 
-  <p><a href="about.html">О нас</a></p>  
-<p><a href="map.html">Карта</a></p>
-<p><a href="literature.html">Литература</a></p> 
-<p><a href="color.html">Цвет</a></p> 
-<p><a href="feno.html">Фенология</a></p> 
-<p><a href="habitat.html">Поведение</a></p> 
-<p><a href="sound.html">Звук</a></p> 
-<p><a href="geo.html">Геология</a></p> 
-<p><a href="structure.html">Строение</a></p>
-<p><a href="styleguide.html">Стайл-гайд</a></p>  -->
+    <p class="chascha">чаща</p>
+  </header> 
 
 <div class="main_screen">
    
@@ -54,16 +43,16 @@
       <li><a href="map.html">Карта</a></li>
       <li><a href="literature.html">Литература</a></li> 
       <li>
-        <p>Разделы</p> 
+        <p>Разделы</p>  
         <ul>
-          <li><a href="color.html">Цвет</a></li> 
-          <li><a href="feno.html">Фенология</a></li> 
+          <li><a href="sound.html">Звук</a></li>
+          <li><a href="geo.html">Геология</a></li>   
           <li><a href="habitat.html">Поведение</a></li> 
-          <li><a href="sound.html">Звук</a></li> 
-          <li><a href="geo.html">Геология</a></li> 
           <li><a href="structure.html">Строение</a></li>
+          <li><a href="feno.html">Фенология</a></li> 
+          <li><a href="color.html">Цвет</a></li>
         </ul>
-      </li>
+      </li> 
       <li><a href="styleguide.html">Стайл-гайд</a></li> 
     </ul>
     <form> 
@@ -75,14 +64,14 @@
   <div class="table">
     <div class="div1"><p>Звук</p></div>
     <div class="div2"><a href="sound/sound_article1.html"><img src="images/sound/sound_article1/img1.webp" alt=""></a></div>
-    <div class="div3"></div>
-    <div class="div4"></div>
+    <div class="div3"></div>  
+    <div class="div4"></div> 
     <div class="div5"><a href="sound/sound_article2.html">Зов дельфинов: ультразвуковая коммуникация</a></div>
-    <div class="div6"></div>
-    <div class="div7"><p>Геология</p></div>
+    <div class="div6"></div>    
+    <div class="div7"><p>Геология</p></div>   
     <div class="div8"><a href="geo/geo_article1.html">Тектонические сдвиги: язык движения Земли</a></div>
-    <div class="div9"><a href="geo/geo_article2.html">Вулканическая пыль: следы катастроф </a></div>
-    <div class="div10"></div>
+    <div class="div9"></div>  
+    <div class="div10"><a href="geo/geo_article2.html">Вулканическая пыль: следы катастроф </a></div>
     <div class="div11"></div>
     <div class="div12"></div>
     <div class="div13"><p>Поведение</p></div>
@@ -106,10 +95,10 @@
     <div class="div31"><p>Цвет</p></div>
     <div class="div32"><a href="color/color_article1.html">Яркие цвета кораллов: сигнал о бедствии</a></div>
     <div class="div33"></div>
-    <div class="div34"></div>
-    <div class="div35"></div>
+    <div class="div34"></div> 
+    <div class="div35"></div>   
     <div class="div36"></div>
-  </div>
+  </div> 
 </div>
 
 
@@ -123,8 +112,8 @@
   <p id="my-form-status"></p>
 </form>
 
-<footer>
-  <div class="names">
+<footer> 
+  <div class="names"> 
     <a href="https://t.me/kaddelina">@kaddelina</a>
     <a href="https://t.me/kudryashhhh">@kudryashhhh</a>
   </div>
@@ -142,7 +131,7 @@
     event.preventDefault();
     var status = document.getElementById("my-form-status");
     var data = new FormData(event.target);
-    fetch(event.target.action, {
+    fetch(event.target.action, { 
       method: form.method,  
       body: data,
       headers: {
@@ -167,6 +156,6 @@
   } 
   form.addEventListener("submit", handleSubmit)
 </script> 
-
+ 
   </body>
 </html>
