--- a/src/structure.html
+++ b/src/structure.html
@@ -19,18 +19,138 @@
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>structure</title>
 </head>
-<body>
-    <p><a href="./index.html">Главная</a></p>
-    <p><a href="./about.html">О нас</a></p>
-    <p><a href="./map.html">Карта</a></p>
-    <p><a href="./literature.html">Литература</a></p>
-    <h1>Знаки изменения строения</h1>
-    <p><a href="structure/structure_article1.html">Статья о строении</a></p>
+<header>
+    <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
+    <p class="chascha">чаща</p>
+  </header>
+ 
 
-    <form>
-        <input type=""  placeholder="Что Вы хотите узнать?">
-        <button id="my-form-button" src="images/main/poisk.svg" ></button>
-        <p id="my-form-status"></p>
-      </form>
-</body>
+<body class="sound"> 
+
+<div class="main_screen">
+   
+  <div class="menu">
+    <ul>
+      <li><a href="index.html">Главная</a></li> 
+      <li><a href="about.html">О нас</a></li>  
+      <li><a href="map.html">Карта</a></li> 
+      <li><a href="literature.html">Литература</a></li> 
+      <li>
+        <p>Разделы</p>  
+        <ul>
+          <li><a href="sound.html">Звук</a></li>
+          <li><a href="geo.html">Геология</a></li>   
+          <li><a href="habitat.html">Поведение</a></li> 
+          <li><a href="structure.html">Строение</a></li>
+          <li><a href="feno.html">Фенология</a></li> 
+          <li><a href="color.html">Цвет</a></li>
+        </ul>
+      </li>
+      <li><a href="styleguide.html">Стайл-гайд</a></li> 
+    </ul>
+    <form> 
+      <input type="text"  placeholder="Что Вы хотите узнать?">
+    </form> 
+  </div>
+    
+  
+  <div class="table">
+    <div class="div1"></div>
+    <div class="div2"><p>СТРОЕНИЕ</p></div>
+    <div class="div3"></div>  
+    <div class="div4"></div> 
+    <div class="div5"></div>
+    <div class="div6"></div>    
+    <div class="div7"></div>   
+    <div class="div8"><a href="structure/structure_article1.html">Паутинные сети: архитектура выживания</a></div>
+    <div class="div9"><p>Скоро здесь будут статьи</p></div>  
+    <div class="div10"><p>Скоро здесь будут статьи</p></div>
+    <div class="div11"><p>Скоро здесь будут статьи</p></div>
+    <div class="div12"><p>Скоро здесь будут статьи</p></div>
+    <div class="div13"></div>
+    <div class="div14"></div>
+    <div class="div15"></div>
+    <div class="div16"></div> 
+    <div class="div17"></div>
+    <div class="div18"></div>
+    <div class="div19"></div>
+    <div class="div20"></div>
+    <div class="div21"></div>
+    <div class="div22"></div>
+    <div class="div23"></div>
+    <div class="div24"></div>
+    <div class="div25"></div>
+    <div class="div26"></div>
+    <div class="div27"></div>
+    <div class="div28"></div>
+    <div class="div29"></div>
+    <div class="div30"></div>
+    <div class="div31"></div>
+    <div class="div32"></div>
+    <div class="div33"></div>
+    <div class="div34"></div> 
+    <div class="div35"></div>   
+    <div class="div36"></div>
+  </div> 
+</div>
+
+
+
+
+<form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
+  <p id="form_text">Присоединяйся к чаще!</p>
+
+  <input class="email" type="email" name="email" placeholder="Почта"/>
+  <button id="my-form-button">Отправить</button>
+  <p id="my-form-status"></p>
+</form>
+
+<footer> 
+  <div class="names"> 
+    <a href="https://t.me/kaddelina">@kaddelina</a>
+    <a href="https://t.me/kudryashhhh">@kudryashhhh</a>
+  </div>
+  <div class="socials"> 
+    <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="images/index/tg.webp" alt=""></a>
+    <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="images/index/vk.webp" alt=""></a>
+    <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="images/index/dzen.webp" alt=""></a>
+  </div>  
+</footer> 
+
+<script>
+  var form = document.getElementById("my-form");
+  
+  async function handleSubmit(event) {
+    event.preventDefault();
+    var status = document.getElementById("my-form-status");
+    var data = new FormData(event.target);
+    fetch(event.target.action, {
+      method: form.method,  
+      body: data,
+      headers: {
+          'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        status.innerHTML = "Спасибо!";
+        form.reset()
+      } else {
+        response.json().then(data => {
+          if (Object.hasOwn(data, 'errors')) {
+            status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+          } else {
+            status.innerHTML = "Форма пуста"
+          }
+        })
+      } 
+    }).catch(error => {
+      status.innerHTML = "Форма пуста"
+    });  
+  } 
+  form.addEventListener("submit", handleSubmit)
+</script> 
+
+  </body>
 </html>
+
+
