--- a/src/sound/sound_article1.html
+++ b/src/sound/sound_article1.html
@@ -6,32 +6,54 @@
 
     <meta property="og:type" content="website" /> 
 <meta property="og:url" content="https://hseadc.github.io/umwelt/" /> 
-<meta property="og:title" content="Умвельт. Медиа о природных знаках " /> 
-<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+<meta property="og:title" content="Чаща. Медиа о природных знаках " /> 
+<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
  
 <!-- Twitter --> 
 <meta property="twitter:card" content="summary_large_image" /> 
 <meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
-<meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
-<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+<meta property="twitter:title" content="Чаща. Медиа о природных знаках " /> 
+<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <title>пение птиц как экологический индикатор</title>
+    <title>Пение птиц как экологический индикатор</title>
 </head>
-<body>
-    <p><a href="../index.html">Главная</a></p>
-    <p><a href="../about.html">О нас</a></p>
-    <p><a href="../map.html">Карта</a></p>
-    <p><a href="../literature.html">Литература</a></p>
+<body class="main">
 
-    <p><a href="../sound.html">Назад</a></p>
-    <h1>Пение птиц как экологический индикатор</h1>
-    <p>Упс! Статья ещё не готова</p>
+    <header>
+        <div class="gradient"><img src="../images/index/top_gradient.png" alt=""></div>
+        <p class="chascha">чаща</p>
+      </header>
 
-    <form>
-        <input type=""  placeholder="Что Вы хотите узнать?">
-        <button id="my-form-button" src="images/main/poisk.svg" ></button>
-        <p id="my-form-status"></p>
-      </form>
+<div class="main_screen">
+   
+  <div class="menu">
+    <ul>
+      <li><a href="index.html">Главная</a></li> 
+      <li><a href="about.html">О нас</a></li>  
+      <li><a href="map.html">Карта</a></li>
+      <li><a href="literature.html">Литература</a></li> 
+      <li>
+        <p>Разделы</p>  
+        <ul>
+          <li><a href="sound.html">Звук</a></li>
+          <li><a href="geo.html">Геология</a></li>   
+          <li><a href="habitat.html">Поведение</a></li> 
+          <li><a href="structure.html">Строение</a></li>
+          <li><a href="feno.html">Фенология</a></li> 
+          <li><a href="color.html">Цвет</a></li>
+        </ul>
+      </li>
+      <li><a href="styleguide.html">Стайл-гайд</a></li> 
+    </ul>
+    <form> 
+      <input type="text"  placeholder="Что Вы хотите узнать?">
+    </form> 
+  </div>
+
+  <p><a href="../geo.html">Назад</a></p>
+  <h1>Пение птиц как экологический индикатор</h1>
+
+
     </body>
 </html>
