--- a/src/about.html
+++ b/src/about.html
@@ -9,14 +9,14 @@
     <meta property="og:url" content="https://hseadc.github.io/umwelt/about.html" /> 
     <meta property="og:title" content="Чаща. Медиа о природных знаках" /> 
     <meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
-    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
      
     <!-- Twitter --> 
     <meta property="twitter:card" content="summary_large_image" /> 
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/about.html" /> 
     <meta property="twitter:title" content="Чаща. Медиа о природных знаках" /> 
     <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
     <link rel="icon" href="images/favicon.png" type="image/x-icon"> 
 </head> 
