--- a/src/color.html
+++ b/src/color.html
@@ -7,7 +7,7 @@
     <meta property="og:url" content="https://hseadc.github.io/umwelt/color.html" /> 
     <meta property="og:title" content="Цветовые изменения в природе" /> 
     <meta property="og:description" content="В этом разделе чаща рассказывает о том, что значат изменения в цветах в природе" /> 
-    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
      
     <!-- Twitter --> 
@@ -15,7 +15,7 @@
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/color.html" /> 
     <meta property="twitter:title" content="Цветовые изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в цветах в природе" /> 
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>color</title>
 </head>
  
