--- a/src/geo.html
+++ b/src/geo.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://hseadc.github.io/umwelt/geo.html" /> 
     <meta property="og:title" content="Геологические изменения в природе" /> 
     <meta property="og:description" content="В этом разделе чаща рассказывает о том, что значат изменения в геологии" /> 
-    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
      
     <!-- Twitter --> 
@@ -16,7 +16,7 @@
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/geo.html" /> 
     <meta property="twitter:title" content="Геологические изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе ЧАЩА рассказывает о том, что значат изменения в геологии" /> 
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <title>geo</title>
 </head>
 <body class="sound"> 
