--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="og:title" content="Чаща. Медиа о природных знаках " /> 
 <meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
-<meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+<meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
  
 <!-- Twitter --> 
@@ -21,7 +21,7 @@
 <meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="twitter:title" content="Чаща. Медиа о природных знаках " /> 
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Медиа Чаща собирает и интерпретирует эти природные сигналы." /> 
-<meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+<meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
 
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
