--- a/src/literature.html
+++ b/src/literature.html
@@ -8,14 +8,14 @@
     <meta property="og:url" content="https://hseadc.github.io/umwelt/literature.html" /> 
     <meta property="og:title" content="Литература от чаща" /> 
     <meta property="og:description" content="В этом разделе чаща рассказывает о книгах, которые пригодились для написания статей" /> 
-    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
      
     <!-- Twitter --> 
     <meta property="twitter:card" content="summary_large_image" /> 
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/literature.html" /> 
     <meta property="twitter:title" content="Литература от чаща" /> 
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о книгах, которые пригодились для написания статей" /> 
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>literature</title>
 </head>
