--- a/src/sound.html
+++ b/src/sound.html
@@ -8,14 +8,14 @@
     <meta property="og:url" content="https://hseadc.github.io/umwelt/sound.html" /> 
     <meta property="og:title" content="Звуковые изменения в природе" /> 
     <meta property="og:description" content="В этом разделе чаща рассказывает о том, что значат изменения в звуках в природе" /> 
-    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
      
     <!-- Twitter --> 
     <meta property="twitter:card" content="summary_large_image" /> 
     <meta property="twitter:url" content="https://hseadc.github.io/umwelt/sound.html" /> 
     <meta property="twitter:title" content="Звуковые изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в звуках в природе" /> 
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>sound</title>
 </head>
