--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -41,34 +41,39 @@
         <h1 class="media_o">медиа о природных знаках</h1>
     </div>
     <div class="navigation">
-        <button class="about_us">
+        <button id="about_but" > <a href="#about_us_id" class="about_us">
             <h2>o проекте</h2>
+        </a>
         </button>
-        <button class="logooo">
+        <button id="logo_but" ><a href="#logo_id" class="logooo">
             <h2>логотип</h2>
-        </button>
-        <button class="color">
+        </a>
+    </button>
+    <button><a href="#color_id" class="color">
             <h2>цвет</h2>
-        </button>
-        <button class="typography">
+        </a>
+    </button>
+        <button id="typo_but" ><a href="#typo_id" class="typography">
             <h2>типографика</h2>
-        </button>
-        <button class="grid">
+        </a></button>
+        <button><a href="#grid_id" class="grid">
             <h2>сетка</h2>
-        </button>
-        <button class="graphic">
+        </a></button>
+       <button id="graphic_but" > <a href="#graphic_id" class="graphic">
             <h2>графика</h2>
-        </button>
-        <button class="lang">
+        </a>
+    </button>
+        <button><a href="#lang_id" class="lang">
             <h2>язык</h2>
-        </button>
-        <button class="merch">
+        </a>
+    </button>
+        <button><a href="#merch_id" class="merch">
             <h2>мерч</h2>
-        </button>
+        </a></button>
     </div>
 
     <div class="about_block">
-        <h3>о проекте</h3>
+        <h3 id="about_us_id" >о проекте</h3>
         <p>Мы — команда тех, кто любит задавать вопросы.<br> Неважно, смотрим ли мы на облака, кору дерева<br> или следы на снегу, — нас всегда волнует: «Что это значит?». <br>Мы собрались вместе, чтобы объединить наши интересы<br> к природе, науке, культуре и дизайну.</p>
         <img class="collage" src="./images/styleguide/collage.webp">
         <div class="missia">
@@ -80,7 +85,7 @@
     </div>
 
     <div class="logotype_block">
-        <h3 class="logoooo">логотип</h3>
+        <h3 id="logo_id" class="logoooo">логотип</h3>
         <img class='first_logo' src="./images/styleguide/logo_green.webp">
         <h4>построение и механика</h4>
         <img src="./images/styleguide/measure_green.webp">
@@ -133,13 +138,13 @@
         <img class="favicon" src="./images/styleguide/favicon.webp">
     </div>
     <div class="color_block">
-        <h3 class="">цвет</h3>
+        <h3 id="color_id" class="">цвет</h3>
         <img class="coloors" src="./images/styleguide/coloors.webp">
         <h4>в вебе</h4>
         <img  class="color_v_webe" src="./images/styleguide/color_v_webe.webp">
     </div>
     <div class="typo_block">
-        <h3 class="">типографика</h3>
+        <h3 id="typo_id" class="">типографика</h3>
         <h4>шрифт</h4>
         <div class="fonts_name">
         <p>Arial Narrow Regular<br> <br>
@@ -213,7 +218,7 @@
         </div>
     </div>
     <div class="grid_block">
-        <h3>сетка</h3>
+        <h3 id="grid_id" >сетка</h3>
         <h4>веб</h4>
         <div class="desktop">
             <p class="prir_chaos">У природного хаоса тоже есть правила.<br> 
@@ -244,14 +249,15 @@
         <img class="pechat" src="./images/styleguide/grid_pechat.webp">
     </div>
     <div class="graphic_block">
-        <h3>графика</h3>
+        <h3 id="graphic_id" >графика</h3>
         <div class="opisanie_graph">
             <p >Стиль, в котором царит естественный хаос, подчиняющийся своим<br> внутренним законам. Это путешествие через густой лес знаний.<br> Такой подход вдохновляет на открытие смысла среди кажущегося<br> беспорядка, оставляя пространство для размышлений <br>и личной интерпретации.</p>
-            <p class="style_text">Ключевые особенности стиля:<br><br>
-
-            - сложная структура и многослойность<br>
-            - отрицательный трекинг и градиенты<br>
-            - фриковатость</p>
+            <ol class="style_text">
+                <li>Ключевые особенности стиля:</li>
+                <li>  — &#160;сложная структура и многослойность;</li>
+                <li> —&#160; отрицательный трекинг и градиенты;</li>
+                <li> — &#160;фриковатость.</li>
+            </ol>
         </div>
             <h4>фильтры</h4>
             <div class="filtrs">
@@ -276,8 +282,52 @@
             <h4>наложение</h4>
             <img class="layers" src="./images/styleguide/layers.webp">
         </div>
-
     </div>
+    <div class="lang_block">
+        <h3 id="lang_id" >язык</h3>
+        <ol class="principi">
+            <li>Мы придерживаемся следующих принципов коммуникации:</li>
+            <li>  — &#160;прозрачность взаимодействий;</li>
+            <li> —&#160; избежание манипуляций с эмоциональным состоянием;</li>
+            <li> — &#160;выстраивание реалистичных ожиданий;</li>
+            <li> — &#160;уважение самостоятельного исследования;</li>
+            <li> — &#160;культурная инклюзия, уважение к разнообразию культурных трактовок природных знаков.</li>
+        </ol>
+
+        <div class="na_nositelyah_lang">
+            <img class="ex_lecture" src="./images/styleguide/rebrand.webp">
+            <img class="ex_korni" src="./images/styleguide/present.webp">
+        </div>
+    </div>
+    <div class="merch_block" >
+     <h3 id="merch_id" >мерч</h3>
+     <h4>примеры</h4>
+     <div class="merch_ex" >
+        <div class="merch_1_2" >
+       <img src="./images/styleguide/merch_1.webp">
+       <img class="tshirt" src="./images/styleguide/merch_2.webp">
+    </div>
+    <div class="merch_3_4">
+       <img src="./images/styleguide/merch_3.webp">
+       <img class="avoska" src="./images/styleguide/merch_4.webp">
+     </div>
+     </div>
+     <h4>ограничения</h4>
+     <p>Мы не хотим ассоциироваться с загрязнением природы.<br>
+        Айдентика не используется на пластиковых носителях.</p>
+        <img class="plastic" src="./images/styleguide/plastic.webp">
+    </div>
+    <footer>
+        <div class="names">
+          <a href="https://t.me/kaddelina">@kaddelina</a>
+          <a href="https://t.me/kudryashhhh">@kudryashhhh</a>
+        </div>
+        <div class="socials"> 
+          <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="./images/index/tg.webp" alt=""></a>
+          <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="./images/index/vk.webp" alt=""></a>
+          <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="./images/index/dzen.webp" alt=""></a>
+        </div>  
+      </footer> 
     
     
 
