--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Про медиа о природных знаках чаща</title>
+    <title>Про чащу</title>
 
     <meta property="og:type" content="website" /> 
     <meta property="og:url" content="https://hseadc.github.io/umwelt/about.html" /> 
@@ -22,10 +22,10 @@
 </head> 
 <body class="about_us"> 
     
-    <div class="menu">
+    <div class="menu"> 
         <ul>
         <li><a href="index.html">Главная</a></li> 
-    </div>
+    </div>  
     
     <p class="chascha1">чаща</p>
     <p class="chascha2">медиа о природных знаках</p> 
