--- a/src/color.html
+++ b/src/color.html
@@ -16,9 +16,9 @@
     <meta property="twitter:title" content="Цветовые изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в цветах в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
-    <title>color</title>
+    <title>Рвздел цвет</title>
 </head>
- 
+  
 
 <body class="sound"> 
     <header>
@@ -54,7 +54,7 @@
   
   <div class="table">
     <div class="div1"></div>
-    <div class="div2"><p>ЦВЕТ</p></div>
+    <div class="div2"><p class="razdel">ЦВЕТ</p></div>
     <div class="div3"></div>  
     <div class="div4"></div> 
     <div class="div5"></div>
