--- a/src/feno.html
+++ b/src/feno.html
@@ -17,7 +17,7 @@
     <meta property="twitter:title" content="Фенологические изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в фенологии в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
-    <title>feno</title>
+    <title>Раздел фенология</title>
 </head>
  
 
@@ -35,7 +35,7 @@
       <li><a href="map.html">Карта</a></li>
       <li><a href="literature.html">Литература</a></li> 
       <li>
-        <p>Разделы</p>  
+        <p>Разделы</p>   
         <ul>
           <li><a href="sound.html">Звук</a></li>
           <li><a href="geo.html">Геология</a></li>   
@@ -43,7 +43,7 @@
           <li><a href="structure.html">Строение</a></li>
           <li><a href="feno.html">Фенология</a></li> 
           <li><a href="color.html">Цвет</a></li>
-        </ul>
+        </ul> 
       </li>
       <li><a href="styleguide.html">Стайл-гайд</a></li> 
     </ul>
@@ -55,7 +55,7 @@
   
   <div class="table">
     <div class="div1"></div>
-    <div class="div2"><p>ФЕНОЛОГИЯ</p></div>
+    <div class="div2"><p class="razdel">ФЕНОЛОГИЯ</p></div>
     <div class="div3"></div>  
     <div class="div4"></div> 
     <div class="div5"></div>
