--- a/src/habitat.html
+++ b/src/habitat.html
@@ -17,7 +17,7 @@
     <meta property="twitter:title" content="Поведенческие изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в поведении в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
-    <title>habitat</title>
+    <title>раздел поведение</title>
 </head>
  
 
@@ -55,7 +55,7 @@
   
   <div class="table">
     <div class="div1"></div>
-    <div class="div2"><p>ПОВЕДЕНИЕ</p></div>
+    <div class="div2"><p class="razdel">ПОВЕДЕНИЕ</p></div>
     <div class="div3"></div>  
     <div class="div4"></div> 
     <div class="div5"></div>
