--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
   <div class="menu">
     <ul>
       <li><a href="index.html">Главная</a></li> 
-      <li><a href="about.html">О нас</a></li>  
+      <li><a href="about.html">О нас</a></li>   
       <li><a href="map.html">Карта</a></li>
       <li><a href="literature.html">Литература</a></li> 
       <li>
@@ -51,8 +51,8 @@
           <li><a href="structure.html">Строение</a></li>
           <li><a href="feno.html">Фенология</a></li> 
           <li><a href="color.html">Цвет</a></li>
-        </ul>
-      </li> 
+        </ul> 
+      </li>  
       <li><a href="styleguide.html">Стайл-гайд</a></li> 
     </ul>
     <form> 
@@ -60,40 +60,40 @@
     </form> 
   </div>
     
-  
+   
   <div class="table">
     <div class="div1"><p>Звук</p></div>
-    <div class="div2"><a href="sound/sound_article1.html"><img src="images/sound/sound_article1/img1.webp" alt=""></a></div>
-    <div class="div3"></div>  
+    <div class="div2" id="div2"><a href="sound/sound_article1.html"><div id="image-container" class="image-container"><img src="images/sound/sound_article1/img1.webp" alt=""> <p>Пение птиц как экологический индикатор</p></div></a></div>
+    <div class="div3"></div>   
     <div class="div4"></div> 
-    <div class="div5"><a href="sound/sound_article2.html">Зов дельфинов: ультразвуковая коммуникация</a></div>
-    <div class="div6"></div>    
+    <div class="div5"><a href="sound/sound_article2.html"> Зов дельфинов: ультразвуковая коммуникация <br><p class="hashtags">#звук #океан #коммуникация</p></a></div>
+    <div class="div6"></div>      
     <div class="div7"><p>Геология</p></div>   
-    <div class="div8"><a href="geo/geo_article1.html">Тектонические сдвиги: язык движения Земли</a></div>
-    <div class="div9"></div>  
-    <div class="div10"><a href="geo/geo_article2.html">Вулканическая пыль: следы катастроф </a></div>
-    <div class="div11"></div>
-    <div class="div12"></div>
-    <div class="div13"><p>Поведение</p></div>
-    <div class="div14"></div>
-    <div class="div15"></div>
-    <div class="div16"><a href="habitat/habitat_article1.html"><img src="images/habitat/habitat_article1/img1.webp" alt=""></a></div>
+    <div class="div8"><a href="geo/geo_article1.html">Тектонические сдвиги: язык движения Земли <br><p class="hashtags">#геология #земля</p></a></div>
+    <div class="div9"></div>    
+    <div class="div10"><a href="geo/geo_article2.html">Вулканическая пыль: следы катастроф <br><p class="hashtags">#вулканы #катастрофы</p></a></div>
+    <div class="div11"></div> 
+    <div class="div12"></div> 
+    <div class="div13"><p>Поведение</p></div> 
+    <div class="div14"></div>  
+    <div class="div15"></div> 
+    <div class="div16" id="div2"><a href="habitat/habitat_article1.html"><div id="image-container" class="image-container"><img src="images/habitat/habitat_article1/img1.webp" alt=""> <p>Правда ли, что коровы ложатся, когда собирается дождь?</p></div></a></div>
     <div class="div17"></div>
-    <div class="div18"></div>
+    <div class="div18"></div> 
     <div class="div19"><p>Строение</p></div>
     <div class="div20"></div>
     <div class="div21"></div>
-    <div class="div22"></div>
+    <div class="div22"></div> 
     <div class="div23"></div>
-    <div class="div24"><a href="structure/structure_article1.html">Паутинные сети: архитектура выживания</a></div>
+    <div class="div24"><a href="structure/structure_article1.html">Паутинные сети: архитектура выживания<br><p class="hashtags">#пауки #лес</p></a></div>
     <div class="div25"><p>Фенология</p></div>
     <div class="div26"></div>
-    <div class="div27"><a href="feno/feno_article1.html"><img src="images/feno/6422219.webp" alt=""></a></div>
-    <div class="div28"><a href="feno/feno_article2.html">Первые морозы: как зима сигнализирует о своём приходе</a></div>
-    <div class="div29"></div>
-    <div class="div30"></div>
+    <div class="div27" id="div2"><a href="feno/feno_article1.html"><div  id="image-container" class="image-container"><img src="images/feno/6422219.webp" alt=""> <p>Ритмы морей: нерестовые циклы рыб</p></div></a></div>
+    <div class="div28"><a href="feno/feno_article2.html">Первые морозы: как зима сигнализирует о своём приходе <br><p class="hashtags">#циклы #времена_года</p></a></div>
+    <div class="div29"></div>     
+    <div class="div30"></div>   
     <div class="div31"><p>Цвет</p></div>
-    <div class="div32"><a href="color/color_article1.html">Яркие цвета кораллов: сигнал о бедствии</a></div>
+    <div class="div32"><a href="color/color_article1.html">Яркие цвета кораллов: сигнал о бедствии <br><p class="hashtags">#цвет</p></a></div>
     <div class="div33"></div>
     <div class="div34"></div> 
     <div class="div35"></div>   
