--- a/src/literature.html
+++ b/src/literature.html
@@ -17,7 +17,7 @@
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о книгах, которые пригодились для написания статей" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>literature</title>
+    <title>раздел литература</title>
 </head>
 <body>
     <p><a href="./index.html">Главная</a></p>
@@ -25,8 +25,8 @@
     <p><a href="./map.html">Карта</a></p>
     <h1>Литература</h1>
     <p><a href="./literature/book.html">Книга</a></p>
-
-    <form>
+ 
+    <form> 
         <input type=""  placeholder="Что Вы хотите узнать?">
         <button id="my-form-button" src="images/main/poisk.svg" ></button>
         <p id="my-form-status"></p>
