--- a/src/map.html
+++ b/src/map.html
@@ -17,7 +17,7 @@
     <meta property="twitter:description" content="В этом разделе есть карта, с помощью которой можно узнать о природных изменениях по всему свету" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title><map name=""></map></title>
+    <title>Раздел карта</title>
 </head>
 <body class="map">
     <p><a href="./index.html">Главная</a></p>
@@ -25,7 +25,7 @@
     <p><a href="./literature.html">Литература</a></p>
     <h1>Карта</h1>
 
-    <form>
+    <form> 
         <input type=""  placeholder="Что Вы хотите узнать?">
         <button id="my-form-button" src="images/main/poisk.svg" ></button>
         <p id="my-form-status"></p>
