--- a/src/sound.html
+++ b/src/sound.html
@@ -17,7 +17,7 @@
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в звуках в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>sound</title>
+    <title>Раздел звук</title>
 </head>
 <header>
     <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
@@ -27,7 +27,7 @@
 
 <body class="sound"> 
 
-<div class="main_screen">
+<div class="main_screen"> 
    
   <div class="menu">
     <ul>
@@ -56,7 +56,7 @@
   
   <div class="table">
     <div class="div1"></div>
-    <div class="div2"><p>ЗВУК</p></div>
+    <div class="div2"><p class="razdel">ЗВУК</p></div>
     <div class="div3"></div>  
     <div class="div4"></div> 
     <div class="div5"></div>
@@ -67,7 +67,7 @@
     <div class="div10"><p>Скоро здесь будут статьи</p></div>
     <div class="div11"><p>Скоро здесь будут статьи</p></div>
     <div class="div12"><p>Скоро здесь будут статьи</p></div>
-    <div class="div13"></div>
+    <div class="div13"></div> 
     <div class="div14"></div>
     <div class="div15"></div>
     <div class="div16"></div> 
