--- a/src/geo.html
+++ b/src/geo.html
@@ -17,7 +17,7 @@
     <meta property="twitter:title" content="Геологические изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе ЧАЩА рассказывает о том, что значат изменения в геологии" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
-    <title>geo</title>
+    <title>Раздел Геология</title>
 </head>
 <body class="sound"> 
     <header>
@@ -26,7 +26,7 @@
     </header>
 <div class="main_screen">
    
-  <div class="menu">
+  <div class="menu"> 
     <ul>
       <li><a href="index.html">Главная</a></li> 
       <li><a href="about.html">О нас</a></li>  
@@ -53,10 +53,10 @@
   
   <div class="table">
     <div class="div1"></div>
-    <div class="div2"><p>ГЕОЛОГИЯ</p></div>
-    <div class="div3"></div>  
+    <div class="div2"><p class="razdel">ГЕОЛОГИЯ</p></div>
+    <div class="div3"></div>   
     <div class="div4"></div> 
-    <div class="div5"></div>
+    <div class="div5"></div> 
     <div class="div6"></div>    
     <div class="div7"></div>   
     <div class="div8"><a href="geo/geo_article1.html">Тектонические сдвиги: язык движения Земли</a></div>
