--- a/src/structure.html
+++ b/src/structure.html
@@ -17,7 +17,7 @@
     <meta property="twitter:description" content="В этом разделе чаща рассказывает о том, что значат изменения в строении в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.png" /> 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>structure</title>
+    <title>Раздел строение</title>
 </head>
 <header>
     <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
@@ -56,7 +56,7 @@
   
   <div class="table">
     <div class="div1"></div>
-    <div class="div2"><p>СТРОЕНИЕ</p></div>
+    <div class="div2"><p class="razdel">СТРОЕНИЕ</p></div>
     <div class="div3"></div>  
     <div class="div4"></div> 
     <div class="div5"></div>
