--- a/src/habitat/habitat_article1.html
+++ b/src/habitat/habitat_article1.html
@@ -21,20 +21,40 @@
     <meta name="keywords" content="Природа, умвельт, природные знаки, медиа о природе, корова, дождь, осадки, поведение животных, ложатся ли коровы, правда ли что коровы ложатся когда собирается дождь">
     <link rel="icon" href="../images/styleguide/favicon.png" type="image/x-icon">
 </head>
-<body class="habitat_articles">
-    
-    <p><a href="../index.html">Главная</a></p>
-    <p><a href="../about.html">О нас</a></p>
-    <p><a href="../map.html">Карта</a></p>
-    <p><a href="../literature.html">Литература</a></p>
+<body class="main">
 
-    <p><a href="../geo.html">Назад</a></p>
-    <h1>Правда ли, что коровы ложатся, когда собирается дождь?</h1>
+    <header>
+        <div class="gradient"><img src="../images/index/top_gradient.png" alt=""></div>
+        <p class="chascha">чаща</p>
+      </header>
 
-    <form>
-        <input type=""  placeholder="Что Вы хотите узнать?">
-        <button id="my-form-button" src="images/main/poisk.svg" ></button>
-        <p id="my-form-status"></p>
-      </form>
+<div class="main_screen">
+   
+  <div class="menu">
+    <ul>
+        <li><a href="../index.html">Главная</a></li> 
+        <li><a href="../about.html">О нас</a></li>  
+        <li><a href="../map.html">Карта</a></li>
+        <li><a href="../literature.html">Литература</a></li> 
+      <li>
+        <p>Разделы</p>  
+        <ul>
+            <li><a href="../sound.html">Звук</a></li>
+            <li><a href="../geo.html">Геология</a></li>   
+            <li><a href="../habitat.html">Поведение</a></li> 
+            <li><a href="../structure.html">Строение</a></li>
+            <li><a href="../feno.html">Фенология</a></li> 
+            <li><a href="../color.html">Цвет</a></li>
+        </ul>
+      </li>
+      <li><a href="../styleguide.html">Стайл-гайд</a></li> 
+    </ul>
+    <form> 
+      <input type="text"  placeholder="Что Вы хотите узнать?">
+    </form> 
+  </div>
+
+  <p><a href="../geo.html">Назад</a></p>
+  <h1>Правда ли, что коровы ложаться, когда собирается дождь?</h1>
     </body>
 </html>
