--- a/src/geo/geo_article1.html
+++ b/src/geo/geo_article1.html
@@ -32,22 +32,22 @@
    
   <div class="menu">
     <ul>
-      <li><a href="index.html">Главная</a></li> 
-      <li><a href="about.html">О нас</a></li>  
-      <li><a href="map.html">Карта</a></li>
-      <li><a href="literature.html">Литература</a></li> 
+      <li><a href="../index.html">Главная</a></li> 
+      <li><a href="../about.html">О нас</a></li>  
+      <li><a href="../map.html">Карта</a></li>
+      <li><a href="../literature.html">Литература</a></li> 
       <li>
         <p>Разделы</p>  
         <ul>
-          <li><a href="sound.html">Звук</a></li>
-          <li><a href="geo.html">Геология</a></li>   
-          <li><a href="habitat.html">Поведение</a></li> 
-          <li><a href="structure.html">Строение</a></li>
-          <li><a href="feno.html">Фенология</a></li> 
-          <li><a href="color.html">Цвет</a></li>
+          <li><a href="../sound.html">Звук</a></li>
+          <li><a href="../geo.html">Геология</a></li>   
+          <li><a href="../habitat.html">Поведение</a></li> 
+          <li><a href="../structure.html">Строение</a></li>
+          <li><a href="../feno.html">Фенология</a></li> 
+          <li><a href="../color.html">Цвет</a></li>
         </ul>
       </li>
-      <li><a href="styleguide.html">Стайл-гайд</a></li> 
+      <li><a href="../styleguide.html">Стайл-гайд</a></li> 
     </ul>
     <form> 
       <input type="text"  placeholder="Что Вы хотите узнать?">
